k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: mtnlmptnss/pet-project-frontend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: firebase-key-volume
              mountPath: /etc/firebase
              readOnly: true
      volumes:
        - name: firebase-key-volume
          secret:
            secretName: firebase-secret
