k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 8000
